Setup original impl module build with delay

--- a/app-di/build.gradle
+++ b/app-di/build.gradle
@@ -23,6 +23,6 @@ android {
 dependencies {
     implementation project(':core')
     implementation project(':testfeature-api')
-//    implementation project(':testfeature-impl')
-    implementation project(':testfeature-noop')
+    implementation project(':testfeature-impl')
+//    implementation project(':testfeature-noop')
 }
