--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,5 @@ include ':app'
 include ':core'
 include ':testfeature-api'
 include ':testfeature-impl'
-include ':testfeature-noop'
+//include ':testfeature-noop'
 include ':app-di'
