Added a solution with simple replacement of projectDir based on data from file

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,6 @@ include ':core'
 include ':testfeature-api'
 include ':testfeature-impl'
 include ':app-di'
+
+// решение через простую замену projectDir для модуля, данные читаются из файла с пропертями
+apply from: "./exclude_simple_replace_project_dir.gradle"
