--- a/settings.gradle
+++ b/settings.gradle
@@ -10,10 +10,20 @@ dependencyResolutionManagement {
 rootProject.name = "ExcludeModules"
 
 include ':app'
+include ':app-di'
 include ':core'
+
 include ':testfeature-api'
 include ':testfeature-impl'
-include ':app-di'
+
+include ':nestedfeature:api'
+include ':nestedfeature:impl'
+
+// грубое решение напрямую
+//project(':testfeature-impl').projectDir = new File('testfeature-noop')
+//project(':nestedfeature:impl').projectDir = new File('nestedfeature/noop')
 
 // решение через простую замену projectDir для модуля, данные читаются из файла с пропертями
-apply from: "./exclude_simple_replace_project_dir.gradle"
+//apply from: "./exclude_simple_replace_project_dir.gradle"
+
+apply from: "./exclude_granulary_from_feature_module_config.gradle"
