--- a/nestedfeature/noop/build.gradle
+++ b/nestedfeature/noop/build.gradle
@@ -18,5 +18,5 @@ android {
 
 dependencies {
     implementation project(':core')
-    implementation project(':testfeature-api')
+    implementation project(':nestedfeature:api')
 }
