Added standalone module. Fixed DI and main screen code

--- a/app-di/build.gradle
+++ b/app-di/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     implementation project(':testfeature-impl')
     implementation project(':nestedfeature:api')
     implementation project(':nestedfeature:impl')
+    implementation project(':standalonefeature')
 }
