--- a/standalonefeature/build.gradle
+++ b/standalonefeature/build.gradle
@@ -22,8 +22,7 @@ android {
 
 dependencies {
 
-    implementation "com.google.ar.sceneform.ux:sceneform-ux:1.17.1"
+    implementation 'com.google.guava:guava:31.1-android'
 
     implementation project(':core')
-    implementation project(':nestedfeature:api')
 }
