Renamed stubs list file. Added a script to check if stubs do compile

--- a/stubs.gradle
+++ b/stubs.gradle
@@ -2,7 +2,7 @@ def stubsConfigProperties = 'local.properties'
 def stubsEnabledKey = 'stubs.enabled'
 def stubsLogsEnabledKey = 'stubs.logs.enabled'
 def configListStubsAvailable = 'stubs_available.conf'
-def configListStubsActivated = 'stubs.conf'
+def configListStubsActivated = 'stubs_activated.conf'
 def projectsToExcludeFromHandling = [ ':', ':app' ]
 def featureModuleSuffix = 'impl'
 def stubSuffixes = [ 'noop', 'stub' ]
