Added docs to config files and check script

--- a/stubs_activated.conf
+++ b/stubs_activated.conf
@@ -1,3 +1,9 @@
+# This file is dedicated to declare feature modules that will be excluded from the build and replaced with stubs.
+# Whenever a developer wants to exclude some module from a build on his local machine it should append its name to the list below.
+# Only modules from "stubs_available.conf" can be configured to be excluded.
+#
+# This file is NOT intended to be stored under VCS. Every developer should have its own personal copy of it.
+
 :testfeature-impl
 :nestedfeature:impl
 :standalonefeature
