--- a/stubs_available.conf
+++ b/stubs_available.conf
@@ -1,3 +1,10 @@
+# This file is dedicated to declare feature modules that have stubs.
+# Projects with names mentioned in this file form the list for which there will be an attempt to replace the original module with a stub during process of gradle sync.
+# Also these modules will be compiled during a stubs check to make sure their sources are up to date.
+# Whenever a team wants to declare that their module has a stub it should just append the project name of their module to the list below.
+#
+# This file is intended to be stored under VCS
+
 :testfeature-impl
 :nestedfeature:impl
 :standalonefeature
