--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'ru.tinkoff.gradle.jarjar'
 }
 
 android {
@@ -46,4 +47,15 @@ dependencies {
     implementation project(':nestedfeature:api')
     implementation project(':standalonefeature')
 
+    implementation fileTree(dir: './build/libs', include: ['*.jar'])     // добавляем в класспас путь к перепакованным либам
+    implementation 'com.google.code.gson:gson:2.8.7'                     // директива на подключение реальной зависимости
+    jarJar 'com.google.code.gson:gson:2.8.7'                             // директива на перепаковку зависимости по правилам джарджара
+
+}
+
+jarJar {
+    jarJarDependency 'com.googlecode.jarjar:jarjar:1.3'                  // точное название артефакта в мавенцентрале (1.3 - последняя версия)
+    rules = [                                                            // непосредственно сами правила
+            'gson-2.8.7.jar': 'com.google.gson.** ru.tinkoff.core.gson.@1'
+    ]
 }
